--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
           </div>
           <div class="data-output-field">
               <h2>Cities report</h2>
+              <div class="cities-report">
+              </div>
           </div>
      </div>
 <!--DATA OUTPUT END-->
