--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 <!--DATA OUTPUT START-->
      <div id="data-output">
          <h1 id="h1">Fire brigade needed!</h1>
+         <div class="data-output-field">
+              <h2>Enter new data</h2>
+              <p>In case you need to enter new data <button id="new-data-button">CLICK HERE</button></p>
+          </div>
           <div class="data-output-field">
               <h2>Critical time</h2>
               <p>The critical time for this operation is <span id="time-span"></span> time units! Hurry up!</p>
